# azad

./: .codesign.env.example  .gitignore  .gitmodules  .release.env.example  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  PROJECT.md  README.md  SPECIFICATION.md  STYLEGUIDE.md  dev  justfile  spotify.example.toml
.cargo/: config.toml
.github/workflows/: azad.yml  ci.yml  release.yml
assets/: azad.icns
crates/azad/: .rustfmt.toml  Azad.entitlements  Cargo.toml  README.md  SPECIFICATION.md  build.rs  justfile
crates/azad-apple-lm/: Package.swift
crates/azad-apple-lm/Sources/AzadAppleLm/: main.swift
crates/azad-asr/: .gitignore  Cargo.toml  README.md  SPECIFICATION.md
crates/azad-asr/INVESTIGATIONS/: tdt-empty-partial.md
crates/azad-asr/docs/: investigation-live-caption-longturn-lag.md
crates/azad-asr/scripts/: caption_churn.py  churn_analysis.py  download-parakeet-models.sh  lag_report.py  live_metrics.py  pin-recording.sh  wer_corpus.py
crates/azad-asr/src/: coreml_vad.rs  lib.rs  logging.rs  main.rs  mlx.rs  pipeline.rs  render.rs  stability.rs  thread_qos.rs  ui.rs
crates/azad-asr/src/audio/: cpal_input.rs  decoded_input.rs  mod.rs  wav_input.rs
crates/azad-asr/src/devices/: mod.rs
crates/azad-asr/src/embed/: mod.rs
crates/azad-asr/src/pipeline/: audio_prep.rs  stitch.rs
crates/azad-asr/tests/: replay.rs
crates/azad-asr/tests/fixtures/: manifest.json
crates/azad-asr/tests/fixtures/audio/: empty-audio.json  flush-tail-completes-final-word.json  recovery-bridges-200ms-gap.json  recovery-splits-400ms-gap.json  stitcher-preserves-prefix-pseudo-suffix.json
crates/azad-mlx-asr/: Package.resolved  Package.swift  README.md
crates/azad-mlx-asr/Sources/AzadMlxAsr/: main.swift
crates/azad-mlx-asr/scripts/: check-swift-pins.sh  swift-build-release.sh
crates/azad-text/: Cargo.toml  build.rs
crates/azad-text/data/: emoji.toml  emoji_aliases.toml
crates/azad-text/scripts/: generate-emoji-phrases.py
crates/azad-text/src/: lib.rs
crates/azad-ui/: Package.swift  README.md
crates/azad-ui/Sources/AzadUI/: Bridge.swift  Controls.swift  Design.swift  Models.swift  OnboardingWindowController.swift  PermissionRequests.swift  SettingsWindowController.swift
crates/azad-ui/Sources/AzadUIPreview/: main.swift
crates/azad/docs/: build-macos.md  isolated-interaction-harness.md  keyboard-shortcut-state-machine.md  keyboard-workflow.md  troubleshooting.md
crates/azad/scripts/: azad-dev.sh  azad-dist.sh  azad-interaction-test.sh
crates/azad/src/: app.rs  apple_lm.rs  config.rs  connectors.rs  device.rs  gateway.rs  input_log.rs  interaction_sm.rs  main.rs  metrics_log.rs  model_download.rs  models.rs  platform.rs  preferred_store.rs  settings.rs  single_instance.rs  speech.rs  spotify_client.rs  spotify_cmd.rs  transcript_history.rs  ui_bridge.rs  ui_model.rs
crates/azad/src/app/: history.rs  policy.rs  settings_ui.rs  text.rs
crates/azad/src/platform/: hotkeys.rs  paste.rs  permissions.rs
docs/: README.md  build-macos.md  design-agent-surface-spec.md  keyboard-shortcut-state-machine.md  quality-plan.md  release-process.md  spotify-player-spike.md  troubleshooting.md
scripts/: azad-dev.sh
src/: app.rs  config.rs  device.rs  hotkey_sm.rs  interaction_sm.rs  main.rs  metrics_log.rs  platform.rs  preferred_store.rs  settings.rs  single_instance.rs  speech.rs
