[workspace]
members = [
    "crates/azad",
    "crates/azad-asr",
]
default-members = ["crates/azad"]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2024"
rust-version = "1.85.0"
repository = "https://github.com/spence/azad"
license = "MIT"

[workspace.dependencies]
thiserror = "1.0"
num_cpus = "1.16"
whisper-cpp-plus = "=0.1.5"
