[package]
name = "azad"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0"
cocoa = "0.26.1"
objc = "0.2.7"
core-graphics = "0.24.0"
enigo = "0.6.1"
global-hotkey = "0.7.0"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "native-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tungstenite = { version = "0.24", default-features = false, features = ["handshake"] }
asr = { package = "azad-asr", path = "../azad-asr" }
azad-text = { path = "../azad-text" }
